maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:6: error: value _1 is not a member of Unit
  var x = findBaggle(xMax,yMax)._1;
                                ^ShortestPathMaze:7: error: value _1 is not a member of Unit
  var y = findBaggle(xMax,yMax)._1;  
                                ^ShortestPathMaze:23: warning: enclosing method findBaggle has result type Unit: return value discarded
  return (i,j)
  ^