maze.shortestpath.ShortestPathMaze.scala.code
override def run() {
  var xMax:Int = getWorldWidth();
  var yMax:Int = getWorldHeight();

	var x = findBaggle(xMax,yMax)._1;
	var y = findBaggle(xMax,yMax)._1;  
}


def findBaggle(xMax:Int, yMax:Int){
  var i:Int =0;
  var j:Int =0;
  while (!hasBaggle(i,j)){
    if (i==xMax) {
      i = 0;
      j += 1
    }
    else {
      i += 1
    }
  }
  return (i,j)
  
}